
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4 (development, see CVS) ----

2003-04-14, Rob Hillis
  Fixed broken link to GPL License in Help section
    - zentrack/www/help/gpl.php
    - zentrack/includes/misc/LICENSE-GPL-2.0

2003-04-10, Kato
  Removed extra shebang (causing stdout message) from included file
    - zentrack/install/egate_config.php.default 1.9
  Fixed problem with ticket reply addresses when using egate
  The reply address will now always point to egate if enabled
    - zentrack/includes/zenTrack.class 1.88
  Reinstated the auto-close for "note" types
    - zentrack/www/addSubmit.php 1.16

2003-04-02, Kato
  Fixed buttons and tabs to translate properly
    - zentrack/includes/templates/ticket_actionBar.php 1.7
    - zentrack/includes/templates/ticket_box.php 1.10
  Enhanced Debugging Output
    - zentrack/includes/footer.php 1.18
    - zentrack/includes/zen.class 1.18
    - zentrack/includes/translator.class 1.5
  Added German translation
    - zentrack/includes/translations/german.trans 1.1
  Postgres Testing/Compatability
    - zentrack/includes/db.class 1.22
    - zentrack/includes/zenTrack.class 1.86
    - zentrack/www/admin/bins.php 1.4
    - zentrack/www/admin/editUserSubmit.php 1.8
    - zentrack/www/admin/priorities.php 1.4
    - zentrack/www/admin/systems.php 1.4
    - zentrack/www/admin/tasks.php 1.5
    - zentrack/www/admin/types.php 1.5

2003-03-28, Kato
  Updated SQL files for new version
    - zentrack/install/UPGRADE_SEED_mysql.sql 1.9
    - zentrack/install/UPGRADE_SEED_oracle.sql 1.8
    - zentrack/install/UPGRADE_SEED_postgres.sql 1.8
    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.1
    - zentrack/install/UPGRADE_mssqlserver.sql 1.1
    - zentrack/install/UPGRADE_mysql.sql 1.7